[CI] Early fail.

--- a/circle.yml
+++ b/circle.yml
@@ -16,8 +16,7 @@ test:
     - xcrun instruments -w 'E8DD285C-51EE-4DB5-B326-7E927686EC36' || true
     - sleep 15
   override: 
-    - rake test
-    - rake carthage_test
+    - rake test && rake carthage_test
   post: 
     - bundle exec danger
     - bash <(curl -s https://codecov.io/bash)
